crates/pg_syntax/tests/snapshots/postgres_regress/horology@207.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT to_timestamp('9-1116', 'Y-MMDD');"
---
SelectStmt@0..40
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..38
    FuncCall@7..38
      Ident@7..19 "to_timestamp"
      Ascii40@19..20 "("
      AConst@20..28
        Sconst@20..28 "'9-1116'"
      Ascii44@28..29 ","
      Whitespace@29..30 " "
      AConst@30..38
        Sconst@30..38 "'Y-MMDD'"
  Ascii41@38..39 ")"
  Ascii59@39..40 ";"

