crates/pg_syntax/tests/snapshots/postgres_regress/horology@210.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT to_timestamp('2005426', 'YYYYWWD');"
---
SelectStmt@0..42
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..40
    FuncCall@7..40
      Ident@7..19 "to_timestamp"
      Ascii40@19..20 "("
      AConst@20..29
        Sconst@20..29 "'2005426'"
      Ascii44@29..30 ","
      Whitespace@30..31 " "
      AConst@31..40
        Sconst@31..40 "'YYYYWWD'"
  Ascii41@40..41 ")"
  Ascii59@41..42 ";"

