crates/pg_syntax/tests/snapshots/postgres_regress/horology@212.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT to_timestamp('2005527', 'IYYYIWID');"
---
SelectStmt@0..43
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..41
    FuncCall@7..41
      Ident@7..19 "to_timestamp"
      Ascii40@19..20 "("
      AConst@20..29
        Sconst@20..29 "'2005527'"
      Ascii44@29..30 ","
      Whitespace@30..31 " "
      AConst@31..41
        Sconst@31..41 "'IYYYIWID'"
  Ascii41@41..42 ")"
  Ascii59@42..43 ";"

