crates/pg_syntax/tests/snapshots/postgres_regress/horology@213.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT to_timestamp('005527', 'IYYIWID');"
---
SelectStmt@0..41
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..39
    FuncCall@7..39
      Ident@7..19 "to_timestamp"
      Ascii40@19..20 "("
      AConst@20..28
        Sconst@20..28 "'005527'"
      Ascii44@28..29 ","
      Whitespace@29..30 " "
      AConst@30..39
        Sconst@30..39 "'IYYIWID'"
  Ascii41@39..40 ")"
  Ascii59@40..41 ";"

