crates/pg_syntax/tests/snapshots/postgres_regress/horology@215.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT to_timestamp('5527', 'IIWID');"
---
SelectStmt@0..37
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..35
    FuncCall@7..35
      Ident@7..19 "to_timestamp"
      Ascii40@19..20 "("
      AConst@20..26
        Sconst@20..26 "'5527'"
      Ascii44@26..27 ","
      Whitespace@27..28 " "
      AConst@28..35
        Sconst@28..35 "'IIWID'"
  Ascii41@35..36 ")"
  Ascii59@36..37 ";"

