crates/pg_syntax/tests/snapshots/postgres_regress/horology@217.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT to_timestamp('20050302', 'YYYYMMDD');"
---
SelectStmt@0..44
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..42
    FuncCall@7..42
      Ident@7..19 "to_timestamp"
      Ascii40@19..20 "("
      AConst@20..30
        Sconst@20..30 "'20050302'"
      Ascii44@30..31 ","
      Whitespace@31..32 " "
      AConst@32..42
        Sconst@32..42 "'YYYYMMDD'"
  Ascii41@42..43 ")"
  Ascii59@43..44 ";"

